# skyrc-mc-rs

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md
.github/workflows/: release.yml  tests.yml
charger-controller/: Cargo.toml
charger-controller-cli/: Cargo.toml
charger-controller-cli/src/: main.rs
charger-controller/locales/: en.json  es.json  hi.json  ru.json  zh.json
charger-controller/src/: app.rs  config_dialog.rs  data.rs  export.rs  i18n.rs  main.rs  profiles.rs  settings.rs  slot.rs  slot_persist.rs
charger-controller/src/ui/: message.rs  mod.rs
charger-controller/src/ui/components/: config_dialog.rs  data_panel.rs  device_panel.rs  graph_panel.rs  mod.rs  settings_dialog.rs  slot_panel.rs
docs/: GUI_DESIGN.md  PROTOCOL.md
mc5000-protocol/: Cargo.toml
mc5000-protocol/src/: bluetooth.rs  device.rs  lib.rs
packaging/: README.md
packaging/common/: README-cli.txt  README-ui.txt
packaging/linux/: README.txt
packaging/macos/: Info.plist.template  README-unsigned.txt  create_app_bundle.sh
packaging/windows/: README.txt
