[package]
name = "charger-controller-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "charger-cli"
path = "src/main.rs"

[dependencies]
mc5000-protocol = { path = "../mc5000-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
btleplug = { workspace = true }
tokio-stream = { workspace = true }

# CLI dependencies
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
ctrlc = "3.4"
