[package]
name = "mc5000-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
btleplug = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
